@startuml

title __VIEW's Class Diagram__\n

  namespace com.example.widget_turntable {
    namespace wangchengmeng_lotteryturntable {
      namespace view {
        class com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan {
            ~ mCirclePaint : Paint
            ~ mRectCircleRange : RectF
            ~ mRectRange : RectF
            ~ mSpanPaint : Paint
            ~ mTextPaint : Paint
            {static} - CIRCLE_ANGLE : float
            {static} - HALF_CIRCLE_ANGLE : float
            - isRunning : boolean
            - isSpanEnd : boolean
            - mCanvas : Canvas
            - mCenter : int
            - mImgIconBitmap : Bitmap[]
            - mPadding : int
            - mPrizeIcon : int[]
            - mPrizeName : String[]
            - mRadius : int
            - mSpanBackground : Bitmap
            - mSpanColor : int[]
            - mSpanCount : int
            - mSpeed : double
            - mStartSpanAngle : float
            - mSurfaceHolder : SurfaceHolder
            - mTextSize : float
            - mThread : Thread
            + LuckSpan()
            + LuckSpan()
            + defaultStart()
            + isStop()
            + luckStop()
            + luckyStart()
            + run()
            + setOnSpanRollListener()
            + surfaceChanged()
            + surfaceCreated()
            + surfaceDestroyed()
            # onMeasure()
            - draw()
            - drawBg()
            - drawPrizeIcon()
            - drawSpan()
            - drawText()
        }
      }
    }
  }
  

  namespace com.example.widget_turntable {
    namespace wangchengmeng_lotteryturntable {
      namespace view {
        interface com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan.SpanRollListener {
            {abstract} + onSpanRollListener()
        }
      }
    }
  }
  

  com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan .up.|> android.view.SurfaceHolder.Callback
  com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan .up.|> java.lang.Runnable
  com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan -up-|> android.view.SurfaceView
  com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan o-- com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan.SpanRollListener : mSpanRollListener
  com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan +-down- com.example.widget_turntable.wangchengmeng_lotteryturntable.view.LuckSpan.SpanRollListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
